# HeroDash

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYTICS_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_SETUP.md  FINAL_STRUCTURE.md  NATS_GUIDE.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_FIXED.md  PRE_COMMIT_SETUP.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.txt  README.md  README_OPTIMIZED.md  README_UPDATED.md  SECURITY.md  agent_coordination_utils.py  agent_nats_wrapper.py  agent_subscriber.py  architecture_orchestrator.py  cli_agent_briefing.md  communication_config.yaml  config.py  configure_environment.sh  docker-compose.yml  hero  hero_core.sh  hero_core_backup.sh  hero_core_optimized.sh  hero_core_optimized_fixed.sh  hero_debug.  hero_optimized  inter_agent_communication.py  launch_hero.sh  launch_hero_optimized.sh  launch_hero_optimized_fixed.sh  (+16 more)
.github/: CODEOWNERS
Modular_PROPOSAL/: INTEGRATION_GUIDE.md  README.md  protocol.md  run_tests.py  swarm_minimal.py
Modular_PROPOSAL/examples/: your_setup.py
Modular_PROPOSAL/swarm_bridge/: bridge.py
Modular_PROPOSAL/swarm_core/: agent.py  core.py  protocols.py
Modular_PROPOSAL/swarm_core/examples/: basic.py  distributed.py
Modular_PROPOSAL/swarm_core/transports/: __init__.py  base.py  memory.py  nats.py
Modular_PROPOSAL/tests/: benchmark.py  edge_cases.py  stress_test.py
agents/: README.md  agent_runtime.py  command_center.py  example_workflows.py  launch_agents.sh  llm_bridge.py  test_agent_integration.py
agents/configs/: agent_capabilities.yaml  langsmith_config.yaml  nats_subjects.yaml
agents/sysprompts/: knowledge_integration_sysprompt.md  task_orchestrator_sysprompt.md
agents/templates/: interaction_template.md  knowledge_template.md  task_template.md
docs/: BRANCH_PROTECTION.md  DOCUMENTATION.md  OPTIMIZED_VERSION.md  OPTIMIZED_VERSION_FIXED.md  PROGRESS_LOG.md  USER_GUIDE.md  dashboard-producers-audit.md  dashboard-runtime-contract.md  hero-reboot-thin-slice.md
docs/plans/: 2026-04-22-hero-reboot-implementation.md
monitors/: agent_coordinator.py  agents_monitor.py  analytics_dashboard.py  chimera_bridge.py  claude_usage_monitor.py  claude_usage_monitor_optimized.py  code_activity_monitor.py  github_activity_monitor.py  github_activity_monitor_optimized.py  graphiti_monitor.py  langsmith_tracer.py  token_usage_analyzer.py
swarm_core/: __init__.py
tests/: test_launcher_contract.py  test_web_dashboard_reboot.py
utils/: dashboard_control.sh  dashboard_diagnostics.sh
web_templates/: dashboard.html
